[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/game.gd" type="Script" id=1]
[ext_resource path="res://Art/tiles.png" type="Texture" id=2]
[ext_resource path="res://Scripts/tile_map.gd" type="Script" id=3]
[ext_resource path="res://Scenes/enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Art/UI/Selection.png" type="Texture" id=5]
[ext_resource path="res://Scripts/placement.gd" type="Script" id=6]
[ext_resource path="res://Art/UI/tower_1.png" type="Texture" id=7]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="GDScript" id=2]

[sub_resource type="TileSet" id=3]
0/name = "corner"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "straight"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 16, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "t-split"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 16, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "cross"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 16, 16, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "surface"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 32, 0, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 1 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
script = SubResource( 2 )

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform vec4 current_color;

void fragment() {
	if (texture(TEXTURE, UV) == vec4(1,1,1,1)) {
        COLOR = current_color;
    } else {
		COLOR = vec4(0,0,0,0);
	}
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/current_color = null

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 4
format = 1
tile_data = PoolIntArray( 0, 4, 0, 1, -536870908, 0, 2, 536870916, 0, 3, 536870916, 0, 4, 536870916, 0, 5, 4, 0, 6, 536870916, 0, 7, 536870916, 0, 8, 536870916, 0, 9, 536870916, 0, 10, 536870916, 0, 11, 536870916, 0, 12, 536870916, 0, 13, 4, 0, 14, 4, 0, 15, 4, 0, 16, 4, 0, 17, 4, 0, 18, 4, 0, 19, 4, 0, 20, 4, 0, 21, 4, 0, 22, 4, 0, 23, 4, 0, 24, 4, 0, 25, 4, 0, 26, 1610612737, 0, 27, 1610612740, 0, 28, 4, 0, 29, 4, 0, 30, 4, 0, 31, 4, 0, 32, -1610612732, 0, 33, 4, 0, 34, 4, 0, 35, 4, 0, 36, 4, 0, 37, 4, 0, 38, 4, 0, 39, 4, 0, 40, -1610612732, 0, 41, -1610612732, 0, 65536, 4, 0, 65537, -536870908, 0, 65538, 4, 0, 65539, 4, 0, 65540, 4, 0, 65541, 4, 0, 65542, 4, 0, 65543, 4, 0, 65544, 4, 0, 65545, 4, 0, 65546, 4, 0, 65547, 4, 0, 65548, 536870916, 0, 65549, 4, 0, 65550, 4, 0, 65551, 4, 0, 65552, 4, 0, 65553, 4, 0, 65554, 4, 0, 65555, 4, 0, 65556, 4, 0, 65557, 4, 0, 65558, 4, 0, 65559, 4, 0, 65560, 4, 0, 65561, 4, 0, 65562, 1610612737, 0, 65563, 1610612740, 0, 65564, 4, 0, 65565, 4, 0, 65566, 4, 0, 65567, 4, 0, 65568, -1610612732, 0, 65569, 4, 0, 65570, 4, 0, 65571, 4, 0, 65572, 4, 0, 65573, 4, 0, 65574, 4, 0, 65575, 4, 0, 65576, -1610612732, 0, 65577, -1610612732, 0, 131072, 4, 0, 131073, 536870916, 0, 131074, 4, 0, 131075, 536870916, 0, 131076, -1610612732, 0, 131077, 4, 0, 131078, 536870916, 0, 131079, 536870916, 0, 131080, 536870916, 0, 131081, 4, 0, 131082, 4, 0, 131083, 4, 0, 131084, 536870916, 0, 131085, 4, 0, 131086, 4, 0, 131087, 4, 0, 131088, 4, 0, 131089, 4, 0, 131090, 4, 0, 131091, 4, 0, 131092, 4, 0, 131093, 4, 0, 131094, 4, 0, 131095, 4, 0, 131096, 4, 0, 131097, 4, 0, 131098, 1610612737, 0, 131099, 1610612740, 0, 131100, 4, 0, 131101, 4, 0, 131102, 4, 0, 131103, 4, 0, 131104, -1610612732, 0, 131105, 4, 0, 131106, 4, 0, 131107, 4, 0, 131108, 4, 0, 131109, 4, 0, 131110, 4, 0, 131111, 4, 0, 131112, -1610612732, 0, 131113, -1610612732, 0, 196608, -1610612735, 0, 196609, -1610612735, 0, 196610, -1610612735, 0, 196611, -1610612735, 0, 196612, -1610612735, 0, 196613, -1610612735, 0, 196614, -1610612735, 0, 196615, -1610612735, 0, 196616, -1610612735, 0, 196617, -1610612735, 0, 196618, -1610612735, 0, 196619, -1610612735, 0, 196620, -1610612735, 0, 196621, -1610612735, 0, 196622, -1610612735, 0, 196623, -1610612735, 0, 196624, -1610612735, 0, 196625, -1610612735, 0, 196626, -1610612735, 0, 196627, -1610612735, 0, 196628, -1610612735, 0, 196629, -1610612735, 0, 196630, -1610612735, 0, 196631, -1610612735, 0, 196632, -1610612735, 0, 196633, -1610612735, 0, 196634, 1610612738, 0, 196635, 4, 0, 196636, 4, 0, 196637, 4, 0, 196638, 4, 0, 196639, 4, 0, 196640, -1610612732, 0, 196641, 4, 0, 196642, 4, 0, 196643, 4, 0, 196644, 4, 0, 196645, 4, 0, 196646, 4, 0, 196647, 4, 0, 196648, -1610612732, 0, 196649, -1610612732, 0, 262144, 536870916, 0, 262145, 536870916, 0, 262146, 536870916, 0, 262147, 536870916, 0, 262148, 536870916, 0, 262149, 4, 0, 262150, 536870916, 0, 262151, 536870916, 0, 262152, 536870916, 0, 262153, 536870916, 0, 262154, 536870916, 0, 262155, 536870916, 0, 262156, 536870916, 0, 262157, 4, 0, 262158, 4, 0, 262159, 4, 0, 262160, 4, 0, 262161, 4, 0, 262162, 4, 0, 262163, 4, 0, 262164, 4, 0, 262165, 4, 0, 262166, 4, 0, 262167, 4, 0, 262168, 4, 0, 262169, 4, 0, 262170, 1610612737, 0, 262171, 4, 0, 262172, 4, 0, 262173, 4, 0, 262174, 4, 0, 262175, 4, 0, 262176, -1610612732, 0, 262177, 4, 0, 262178, 4, 0, 262179, 4, 0, 262180, 4, 0, 262181, 4, 0, 262182, 4, 0, 262183, 4, 0, 262184, -1610612732, 0, 262185, -1610612732, 0, 327680, 536870916, 0, 327681, 536870916, 0, 327682, 536870916, 0, 327683, 536870916, 0, 327684, 536870916, 0, 327685, 4, 0, 327686, 536870916, 0, 327687, 536870916, 0, 327688, 536870916, 0, 327689, 536870916, 0, 327690, 536870916, 0, 327691, 536870916, 0, 327692, 536870916, 0, 327693, 4, 0, 327694, 4, 0, 327695, 4, 0, 327696, 4, 0, 327697, 4, 0, 327698, 4, 0, 327699, 4, 0, 327700, 0, 0, 327701, -1610612735, 0, 327702, -1610612735, 0, 327703, -1610612736, 0, 327704, 4, 0, 327705, 4, 0, 327706, -1073741824, 0, 327707, -1073741823, 0, 327708, -1610612734, 0, 327709, -1610612735, 0, 327710, -1610612735, 0, 327711, -1610612736, 0, 327712, -1610612732, 0, 327713, 4, 0, 327714, 0, 0, 327715, -1610612735, 0, 327716, -1610612735, 0, 327717, -1610612735, 0, 327718, -1610612735, 0, 327719, -1610612735, 0, 327720, -1610612735, 0, 327721, -1610612735, 0, 393216, 536870916, 0, 393217, 536870916, 0, 393218, 536870916, 0, 393219, 536870916, 0, 393220, 536870916, 0, 393221, 4, 0, 393222, 536870916, 0, 393223, 536870916, 0, 393224, 536870916, 0, 393225, 536870916, 0, 393226, 536870916, 0, 393227, 536870916, 0, 393228, 536870916, 0, 393229, 4, 0, 393230, 4, 0, 393231, 4, 0, 393232, 4, 0, 393233, 4, 0, 393234, 4, 0, 393235, 4, 0, 393236, 1610612737, 0, 393237, 4, 0, 393238, 4, 0, 393239, 1, 0, 393240, 4, 0, 393241, 4, 0, 393242, 4, 0, 393243, 4, 0, 393244, 1610612737, 0, 393245, 4, 0, 393246, 4, 0, 393247, 1610612737, 0, 393248, -1610612732, 0, 393249, 4, 0, 393250, 1, 0, 393251, 4, 0, 393252, 4, 0, 393253, 4, 0, 393254, 4, 0, 393255, 4, 0, 393256, -1610612732, 0, 393257, -1610612732, 0, 458752, 4, 0, 458753, 4, 0, 458754, 4, 0, 458755, 4, 0, 458756, 4, 0, 458757, 4, 0, 458758, 4, 0, 458759, 4, 0, 458760, 4, 0, 458761, 4, 0, 458762, 4, 0, 458763, 4, 0, 458764, 4, 0, 458765, 4, 0, 458766, 4, 0, 458767, 4, 0, 458768, 4, 0, 458769, 4, 0, 458770, 4, 0, 458771, 4, 0, 458772, 1610612737, 0, 458773, 4, 0, 458774, 4, 0, 458775, 1, 0, 458776, 4, 0, 458777, 4, 0, 458778, 4, 0, 458779, 4, 0, 458780, 1610612737, 0, 458781, 4, 0, 458782, 4, 0, 458783, 1610612737, 0, 458784, -1610612732, 0, 458785, 4, 0, 458786, 1, 0, 458787, 4, 0, 458788, 4, 0, 458789, 4, 0, 458790, 4, 0, 458791, 4, 0, 458792, -1610612732, 0, 458793, -1610612732, 0, 524288, 4, 0, 524289, 4, 0, 524290, 4, 0, 524291, 4, 0, 524292, 4, 0, 524293, 4, 0, 524294, 4, 0, 524295, 4, 0, 524296, 4, 0, 524297, 4, 0, 524298, 4, 0, 524299, 4, 0, 524300, 4, 0, 524301, 4, 0, 524302, 4, 0, 524303, 4, 0, 524304, 4, 0, 524305, 4, 0, 524306, 4, 0, 524307, 4, 0, 524308, 1610612737, 0, 524309, 4, 0, 524310, 4, 0, 524311, 1, 0, 524312, 4, 0, 524313, 4, 0, 524314, 4, 0, 524315, 4, 0, 524316, 1610612737, 0, 524317, 4, 0, 524318, 4, 0, 524319, 1610612737, 0, 524320, -1610612732, 0, 524321, 4, 0, 524322, 1, 0, 524323, 4, 0, 524324, 4, 0, 524325, 4, 0, 524326, 4, 0, 524327, 4, 0, 524328, -1610612732, 0, 524329, -1610612732, 0, 589824, 4, 0, 589825, 4, 0, 589826, 4, 0, 589827, 4, 0, 589828, 4, 0, 589829, 4, 0, 589830, 4, 0, 589831, 4, 0, 589832, 4, 0, 589833, 4, 0, 589834, 4, 0, 589835, 4, 0, 589836, 4, 0, 589837, 4, 0, 589838, 4, 0, 589839, 4, 0, 589840, 4, 0, 589841, 4, 0, 589842, 1610612740, 0, 589843, 1610612740, 0, 589844, 1610612737, 0, 589845, 1610612740, 0, 589846, 1610612740, 0, 589847, 1, 0, 589848, 1610612740, 0, 589849, 1610612740, 0, 589850, 1610612740, 0, 589851, 1610612740, 0, 589852, 1610612737, 0, 589853, 1610612740, 0, 589854, 1610612740, 0, 589855, 1610612737, 0, 589856, -1610612732, 0, 589857, 1610612740, 0, 589858, 1, 0, 589859, 1610612740, 0, 589860, 1610612740, 0, 589861, 1610612740, 0, 589862, 1610612740, 0, 589863, 4, 0, 589864, -1610612732, 0, 589865, -1610612732, 0, 655360, 4, 0, 655361, 4, 0, 655362, 4, 0, 655363, 4, 0, 655364, 4, 0, 655365, 4, 0, 655366, 4, 0, 655367, 4, 0, 655368, 4, 0, 655369, 4, 0, 655370, 4, 0, 655371, 4, 0, 655372, 4, 0, 655373, 4, 0, 655374, 4, 0, 655375, 4, 0, 655376, 4, 0, 655377, 4, 0, 655378, 4, 0, 655379, 4, 0, 655380, 1610612737, 0, 655381, 4, 0, 655382, 4, 0, 655383, 1, 0, 655384, 4, 0, 655385, 4, 0, 655386, 4, 0, 655387, 4, 0, 655388, 1610612737, 0, 655389, 4, 0, 655390, 4, 0, 655391, 1610612737, 0, 655392, -1610612732, 0, 655393, 4, 0, 655394, 1, 0, 655395, 4, 0, 655396, 4, 0, 655397, 4, 0, 655398, 4, 0, 655399, 4, 0, 655400, -1610612732, 0, 655401, -1610612732, 0, 720896, 4, 0, 720897, 4, 0, 720898, 4, 0, 720899, 4, 0, 720900, 4, 0, 720901, 4, 0, 720902, 4, 0, 720903, 4, 0, 720904, 4, 0, 720905, 4, 0, 720906, 4, 0, 720907, 4, 0, 720908, 4, 0, 720909, 4, 0, 720910, 4, 0, 720911, 4, 0, 720912, -1073741823, 0, 720913, -1073741823, 0, 720914, -1073741823, 0, 720915, -1073741823, 0, 720916, 1610612736, 0, 720917, 4, 0, 720918, 4, 0, 720919, 1, 0, 720920, 4, 0, 720921, 4, 0, 720922, 4, 0, 720923, 4, 0, 720924, 1610612737, 0, 720925, 4, 0, 720926, 4, 0, 720927, 1610612737, 0, 720928, -1610612732, 0, 720929, 4, 0, 720930, 1, 0, 720931, 4, 0, 720932, 4, 0, 720933, 4, 0, 720934, 4, 0, 720935, 4, 0, 720936, -1610612732, 0, 720937, -1610612732, 0, 786432, 4, 0, 786433, 4, 0, 786434, 4, 0, 786435, 4, 0, 786436, 4, 0, 786437, 4, 0, 786438, 4, 0, 786439, 4, 0, 786440, 4, 0, 786441, 4, 0, 786442, 4, 0, 786443, 4, 0, 786444, 4, 0, 786445, 4, 0, 786446, 4, 0, 786447, 4, 0, 786448, 4, 0, 786449, 4, 0, 786450, 4, 0, 786451, 4, 0, 786452, 4, 0, 786453, 4, 0, 786454, 4, 0, 786455, 1, 0, 786456, 4, 0, 786457, 4, 0, 786458, 4, 0, 786459, 4, 0, 786460, 1, 0, 786461, 4, 0, 786462, 4, 0, 786463, 1, 0, 786464, -1610612732, 0, 786465, 4, 0, 786466, 1, 0, 786467, 4, 0, 786468, 4, 0, 786469, 4, 0, 786470, 4, 0, 786471, 4, 0, 786472, -1610612732, 0, 786473, -1610612732, 0, 851968, 4, 0, 851969, 4, 0, 851970, 4, 0, 851971, 4, 0, 851972, 4, 0, 851973, 4, 0, 851974, 4, 0, 851975, 4, 0, 851976, 4, 0, 851977, 4, 0, 851978, 4, 0, 851979, 4, 0, 851980, 4, 0, 851981, 4, 0, 851982, 4, 0, 851983, 4, 0, 851984, 4, 0, 851985, 4, 0, 851986, 4, 0, 851987, 4, 0, 851988, 4, 0, 851989, 4, 0, 851990, 4, 0, 851991, 1, 0, 851992, 4, 0, 851993, 4, 0, 851994, 4, 0, 851995, 4, 0, 851996, 1, 0, 851997, 4, 0, 851998, 4, 0, 851999, 1, 0, 852000, 4, 0, 852001, 4, 0, 852002, 1, 0, 852003, 4, 0, 852004, 4, 0, 852005, 4, 0, 852006, 4, 0, 852007, 4, 0, 852008, -1610612732, 0, 852009, -1610612732, 0, 917504, 4, 0, 917505, 4, 0, 917506, 4, 0, 917507, 4, 0, 917508, 4, 0, 917509, 4, 0, 917510, 4, 0, 917511, 4, 0, 917512, 4, 0, 917513, 4, 0, 917514, 4, 0, 917515, 4, 0, 917516, 4, 0, 917517, 4, 0, 917518, 4, 0, 917519, 4, 0, 917520, 4, 0, 917521, 4, 0, 917522, 4, 0, 917523, 4, 0, 917524, 4, 0, 917525, 4, 0, 917526, 4, 0, 917527, -1073741824, 0, 917528, -1073741823, 0, 917529, -1073741823, 0, 917530, -1073741823, 0, 917531, -1073741823, 0, 917532, 1610612738, 0, 917533, 4, 0, 917534, 1610612740, 0, 917535, 1610612737, 0, 917536, 4, 0, 917537, 4, 0, 917538, 1, 0, 917539, 4, 0, 917540, 4, 0, 917541, 4, 0, 917542, 4, 0, 917543, 4, 0, 917544, -1610612732, 0, 917545, -1610612732, 0, 983040, 4, 0, 983041, 4, 0, 983042, 4, 0, 983043, 4, 0, 983044, 4, 0, 983045, 4, 0, 983046, 4, 0, 983047, 4, 0, 983048, 4, 0, 983049, 4, 0, 983050, 4, 0, 983051, 4, 0, 983052, 4, 0, 983053, 4, 0, 983054, 4, 0, 983055, 4, 0, 983056, 4, 0, 983057, 4, 0, 983058, 4, 0, 983059, 4, 0, 983060, 4, 0, 983061, 4, 0, 983062, 4, 0, 983063, 4, 0, 983064, 4, 0, 983065, 4, 0, 983066, 4, 0, 983067, 4, 0, 983068, 1, 0, 983069, 4, 0, 983070, 4, 0, 983071, 1, 0, 983072, 4, 0, 983073, 4, 0, 983074, 1, 0, 983075, 4, 0, 983076, 4, 0, 983077, 4, 0, 983078, 4, 0, 983079, 4, 0, 983080, -1610612732, 0, 983081, -1610612732, 0, 1048576, 4, 0, 1048577, 4, 0, 1048578, 4, 0, 1048579, 4, 0, 1048580, 4, 0, 1048581, 4, 0, 1048582, 4, 0, 1048583, 4, 0, 1048584, 4, 0, 1048585, 4, 0, 1048586, 4, 0, 1048587, 4, 0, 1048588, 4, 0, 1048589, 4, 0, 1048590, 4, 0, 1048591, 4, 0, 1048592, 4, 0, 1048593, 4, 0, 1048594, 4, 0, 1048595, 4, 0, 1048596, 4, 0, 1048597, 4, 0, 1048598, 4, 0, 1048599, 4, 0, 1048600, 4, 0, 1048601, 4, 0, 1048602, 4, 0, 1048603, 4, 0, 1048604, 1, 0, 1048605, 4, 0, 1048606, 4, 0, 1048607, 1, 0, 1048608, 4, 0, 1048609, 4, 0, 1048610, 1, 0, 1048611, 4, 0, 1048612, 4, 0, 1048613, 4, 0, 1048614, 4, 0, 1048615, 4, 0, 1048616, -1610612732, 0, 1048617, -1610612732, 0, 1114112, 4, 0, 1114113, 4, 0, 1114114, 4, 0, 1114115, 4, 0, 1114116, 4, 0, 1114117, 4, 0, 1114118, 4, 0, 1114119, 4, 0, 1114120, 4, 0, 1114121, 4, 0, 1114122, 4, 0, 1114123, 4, 0, 1114124, 4, 0, 1114125, 4, 0, 1114126, 4, 0, 1114127, 4, 0, 1114128, 4, 0, 1114129, 4, 0, 1114130, 4, 0, 1114131, 4, 0, 1114132, 4, 0, 1114133, 4, 0, 1114134, 4, 0, 1114135, 4, 0, 1114136, 4, 0, 1114137, 4, 0, 1114138, 4, 0, 1114139, 4, 0, 1114140, 1, 0, 1114141, 4, 0, 1114142, 4, 0, 1114143, 1, 0, 1114144, 4, 0, 1114145, 4, 0, 1114146, 1, 0, 1114147, 4, 0, 1114148, 4, 0, 1114149, 4, 0, 1114150, 4, 0, 1114151, 4, 0, 1114152, -1610612732, 0, 1114153, -1610612732, 0, 1179648, 4, 0, 1179649, 4, 0, 1179650, 4, 0, 1179651, 4, 0, 1179652, 4, 0, 1179653, 4, 0, 1179654, 4, 0, 1179655, 4, 0, 1179656, 4, 0, 1179657, 4, 0, 1179658, 4, 0, 1179659, 4, 0, 1179660, 4, 0, 1179661, 4, 0, 1179662, 4, 0, 1179663, 4, 0, 1179664, 4, 0, 1179665, 4, 0, 1179666, 4, 0, 1179667, 4, 0, 1179668, 4, 0, 1179669, 4, 0, 1179670, 4, 0, 1179671, 4, 0, 1179672, 4, 0, 1179673, 4, 0, 1179674, 4, 0, 1179675, 4, 0, 1179676, 1, 0, 1179677, 4, 0, 1179678, 4, 0, 1179679, 1, 0, 1179680, 4, 0, 1179681, 4, 0, 1179682, 1, 0, 1179683, 4, 0, 1179684, 4, 0, 1179685, 4, 0, 1179686, 4, 0, 1179687, 4, 0, 1179688, -1610612732, 0, 1179689, -1610612732, 0, 1245184, 4, 0, 1245185, 4, 0, 1245186, 4, 0, 1245187, 4, 0, 1245188, 4, 0, 1245189, 4, 0, 1245190, 4, 0, 1245191, 4, 0, 1245192, 4, 0, 1245193, 4, 0, 1245194, 4, 0, 1245195, 4, 0, 1245196, 4, 0, 1245197, 4, 0, 1245198, 4, 0, 1245199, 4, 0, 1245200, 4, 0, 1245201, 4, 0, 1245202, 4, 0, 1245203, 4, 0, 1245204, 4, 0, 1245205, 4, 0, 1245206, 4, 0, 1245207, 4, 0, 1245208, 4, 0, 1245209, 4, 0, 1245210, 4, 0, 1245211, 4, 0, 1245212, 1, 0, 1245213, 4, 0, 1245214, 4, 0, 1245215, -1073741824, 0, 1245216, -1073741823, 0, 1245217, -1073741823, 0, 1245218, -1073741822, 0, 1245219, -1073741823, 0, 1245220, -1073741823, 0, 1245221, -1073741823, 0, 1245222, -1073741823, 0, 1245223, -1073741823, 0, 1245224, -1073741823, 0, 1245225, -1073741823, 0, 1310720, 4, 0, 1310721, 4, 0, 1310722, 4, 0, 1310723, 4, 0, 1310724, 4, 0, 1310725, 4, 0, 1310726, 4, 0, 1310727, 4, 0, 1310728, 4, 0, 1310729, 4, 0, 1310730, 4, 0, 1310731, 4, 0, 1310732, 4, 0, 1310733, 4, 0, 1310734, 4, 0, 1310735, 4, 0, 1310736, 4, 0, 1310737, 4, 0, 1310738, 4, 0, 1310739, 4, 0, 1310740, 4, 0, 1310741, 4, 0, 1310742, 4, 0, 1310743, 4, 0, 1310744, 4, 0, 1310745, 4, 0, 1310746, 4, 0, 1310747, 4, 0, 1310748, 1, 0, 1310749, 4, 0, 1310750, 4, 0, 1310751, 4, 0, 1310752, 4, 0, 1310753, 4, 0, 1310754, 4, 0, 1310755, 4, 0, 1310756, 4, 0, 1310757, 4, 0, 1310758, 4, 0, 1310759, 4, 0, 1310760, -1610612732, 0, 1310761, -1610612732, 0, 1376256, 4, 0, 1376257, 4, 0, 1376258, 4, 0, 1376259, 4, 0, 1376260, 4, 0, 1376261, 4, 0, 1376262, 4, 0, 1376263, 4, 0, 1376264, 4, 0, 1376265, 4, 0, 1376266, 4, 0, 1376267, 4, 0, 1376268, 4, 0, 1376269, 4, 0, 1376270, 4, 0, 1376271, 4, 0, 1376272, 4, 0, 1376273, 4, 0, 1376274, 4, 0, 1376275, 4, 0, 1376276, 4, 0, 1376277, 4, 0, 1376278, 4, 0, 1376279, 4, 0, 1376280, 4, 0, 1376281, 4, 0, 1376282, 4, 0, 1376283, 4, 0, 1376284, 1, 0, 1376285, 4, 0, 1376286, 4, 0, 1376287, 4, 0, 1376288, 4, 0, 1376289, 4, 0, 1376290, 4, 0, 1376291, 4, 0, 1376292, 4, 0, 1376293, 4, 0, 1376294, 4, 0, 1376295, 4, 0, 1376296, -1610612732, 0, 1376297, -1610612732, 0 )
script = ExtResource( 3 )

[node name="Placement" type="Sprite" parent="TileMap"]
material = SubResource( 5 )
texture = ExtResource( 5 )
centered = false
script = ExtResource( 6 )
red = Color( 0.929688, 0.288201, 0.239685, 0.392157 )
green = Color( 0.262745, 0.776471, 0.00392157, 0.392157 )

[node name="TypeLable" type="Label" parent="."]
visible = false
margin_left = 96.0
margin_top = 296.0
margin_right = 136.0
margin_bottom = 310.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy" parent="." instance=ExtResource( 4 )]
position = Vector2( 128, 40 )
rotation = -9.75848e-07

[node name="Button" type="Button" parent="."]
margin_right = 28.0
margin_bottom = 22.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 48.0
margin_right = 110.0
margin_bottom = 20.0
text = "Tower 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 128.0
margin_right = 190.0
margin_bottom = 20.0
text = "Tower 3"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="died" from="Enemy" to="." method="_on_Enemy_died"]
[connection signal="pressed" from="Button" to="." method="_on_tower_1"]
[connection signal="pressed" from="Button2" to="." method="_on_tower_2"]
[connection signal="pressed" from="Button3" to="." method="_on_tower_3"]
